# SocketLayer

./: CMakeLists.txt  README.md  Socket.h  socket_main.cpp
applications/http_server/: CMakeLists.txt  main.cpp
applications/http_server/include/: HTTP_Server.h  MessageQueue.h
applications/http_server/src/: HTTP_Server.cpp  MessageQueue.cpp
applications/http_server/tests/: message_queue_test.cpp
include/: Socket.h
src/: Socket.cpp
tests/: socket_test.cpp
